--- a/drivers/sensor/CMakeLists.txt
+++ b/drivers/sensor/CMakeLists.txt
@@ -66,6 +66,7 @@ add_subdirectory_ifdef(CONFIG_OPT3001		opt3001)
 add_subdirectory_ifdef(CONFIG_HDC20X0		hdc20x0)
 add_subdirectory_ifdef(CONFIG_PMS7003		pms7003)
 add_subdirectory_ifdef(CONFIG_QDEC_NRFX		qdec_nrfx)
+add_subdirectory_ifdef(CONFIG_QDEC_SAM		qdec_sam)
 add_subdirectory_ifdef(CONFIG_TEMP_NRF5		nrf5)
 add_subdirectory_ifdef(CONFIG_SGP30		sgp30)
 add_subdirectory_ifdef(CONFIG_SHT3XD		sht3xd)
