--- a/drivers/sensor/Kconfig
+++ b/drivers/sensor/Kconfig
@@ -176,6 +176,8 @@ source "drivers/sensor/qdec_nrfx/Kconfig"
 
 source "drivers/sensor/sgp30/Kconfig"
 
+source "drivers/sensor/qdec_sam/Kconfig"
+
 source "drivers/sensor/sht3xd/Kconfig"
 
 source "drivers/sensor/si7006/Kconfig"
