--- a/drivers/sensor/Kconfig
+++ b/drivers/sensor/Kconfig
@@ -182,6 +182,8 @@ source "drivers/sensor/sgp30/Kconfig"
 
 source "drivers/sensor/qdec_sam/Kconfig"
 
+source "drivers/sensor/sbs_gauge/Kconfig"
+
 source "drivers/sensor/sht3xd/Kconfig"
 
 source "drivers/sensor/si7006/Kconfig"
