--- a/dts/arm/ti/cc1352r.dtsi
+++ b/dts/arm/ti/cc1352r.dtsi
@@ -12,15 +12,19 @@
 		reg = <0x20000000 DT_SIZE_K(80)>;
 	};
 
-        flash_controller: flash-controller@400fd000 {
-                compatible = "ti,stellaris-flash-controller";
-                reg = <0x400fd000 0x1000>;
-                #address-cells = <1>;
-                #size-cells = <1>;
-                label = "FLASH_CTRL";
-                flash0: serial-flash@0 {
-                        reg = <0x0 DT_SIZE_K(352)>;
-                };
+	flash0: serial-flash@0 {
+		reg = <0x0 DT_SIZE_K(352)>;
 
-        };
+		partitions {
+			compatible = "fixed-partitions";
+			#address-cells = <1>;
+			#size-cells = <1>;
+
+			/* CCFG registers occupy the last 88 bytes of flash */
+			ti_ccfg_partition: partition@57fa8 {
+				label = "ti_ccfg";
+				reg = <0x57fa8 88>;
+			};
+		};
+	};
 };
