--- a/boards/arm/beagle_bcf/beagleconnect_freedom.dts
+++ b/boards/arm/beagle_bcf/beagleconnect_freedom.dts
@@ -123,13 +123,13 @@
 
 	/* I2C0 */
 	i2c0_scl_default: i2c0_scl_default {
-		pinmux = <25 IOC_PORT_MCU_I2C_MSSCL | IOC_CURRENT_8MA | IOC_STRENGTH_MAX>;
+		pinmux = <25 (IOC_PORT_MCU_I2C_MSSCL | IOC_CURRENT_8MA | IOC_STRENGTH_MAX)>;
 		bias-pull-up;
 		drive-open-drain;
 		input-enable;
 	};
 	i2c0_sda_default: i2c0_sda_default {
-		pinmux = <26 IOC_PORT_MCU_I2C_MSSDA | IOC_CURRENT_8MA | IOC_STRENGTH_MAX>;
+		pinmux = <26 (IOC_PORT_MCU_I2C_MSSDA | IOC_CURRENT_8MA | IOC_STRENGTH_MAX)>;
 		bias-pull-up;
 		drive-open-drain;
 		input-enable;
