--- a/boards/arm/beagle_bcf/beagleconnect_freedom_defconfig
+++ b/boards/arm/beagle_bcf/beagleconnect_freedom_defconfig
@@ -16,7 +16,7 @@ CONFIG_CC13X2_CC26X2_BOOTLOADER_ENABLE=y
 CONFIG_CC13X2_CC26X2_BOOTLOADER_BACKDOOR_ENABLE=y
 CONFIG_CC13X2_CC26X2_BOOTLOADER_BACKDOOR_PIN=15
 
-CONFIG_PINMUX=y
+CONFIG_PINCTRL=y
 CONFIG_GPIO=y
 CONFIG_SERIAL=y
 CONFIG_I2C=y
@@ -30,7 +30,7 @@ CONFIG_SENSOR=y
 CONFIG_OPT3001=y
 CONFIG_LIS2DH=y
 CONFIG_LIS2DH_OPER_MODE_LOW_POWER=n
-CONFIG_TI_HDC20XX=y
+CONFIG_TI_HDC20XX=n
 
 CONFIG_BUILD_OUTPUT_HEX=y
 
