--- a/boards/arm/beagle_bcf/beagleconnect_freedom.dts
+++ b/boards/arm/beagle_bcf/beagleconnect_freedom.dts
@@ -76,6 +76,7 @@
         };
 
         humidity: hdc2010-humidity@41 {
+		status = "disabled";
             compatible = "ti,hdc2010";
             reg = <0x41>;
             label = "HDC2010-HUMIDITY";
@@ -221,6 +222,7 @@
 	pinctrl-0 = <&spi0_sck_default &spi0_mosi_default
 		&spi0_miso_default &spi0_cs0_default
 		&spi0_cs1_default &spi0_cs2_default>;
+	pinctrl-names = "default";
     cs-gpios = <&gpio0 8 GPIO_ACTIVE_LOW>,
         <&gpio0 28 GPIO_ACTIVE_LOW>,  // mikroBUS port 1
         <&gpio0 27 GPIO_ACTIVE_LOW>;  // mikroBUS port 2
