--- a/soc/ti/k3/soc.yml
+++ b/soc/ti/k3/soc.yml
@@ -10,3 +10,6 @@ family:
     - name: am6442
       cpuclusters:
       - name: m4
+    - name: j721e
+      cpuclusters:
+      - name: main/r5f0_0
